frame/support/test/tests/construct_runtime_ui/invalid_module_entry.stderr
error: expected one of: `Pallet`, `Call`, `Storage`, `Event`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`, `FreezeReason`, `HoldReason`, `LockId`, `SlashReason`
 --> tests/construct_runtime_ui/invalid_module_entry.rs:7:23
  |
7 |         Balance: balances::{Error},
  |                             ^^^^^
